syntax = "proto3";

option go_package = "cosmossdk.io/tx/textual/internal/testpb";

import "google/protobuf/descriptor.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

// A is used for testing value renderers.
message A {
  // Fields that are parseable by SIGN_MODE_TEXTUAL.
  uint32                   UINT32             = 1;
  uint64                   UINT64             = 2;
  int32                    INT32              = 3;
  int64                    INT64              = 4;
  string                   SDKINT             = 5 [(cosmos_proto.scalar) = "cosmos.Int"];
  string                   SDKDEC             = 6 [(cosmos_proto.scalar) = "cosmos.Dec"];
  cosmos.base.v1beta1.Coin COIN               = 7;
  repeated cosmos.base.v1beta1.Coin COINS     = 8;
  bytes                             BYTES     = 9;
  google.protobuf.Timestamp         TIMESTAMP = 10;
  google.protobuf.Duration          DURATION  = 11;
  ExternalEnum ENUM                           = 12;

  // Fields that are not handled by SIGN_MODE_TEXTUAL.
  sint32         SINT32   = 101;
  sint64         SINT64   = 102;
  sfixed32       SFIXED32 = 105;
  fixed32        FIXED32  = 106;
  float          FLOAT    = 107;
  sfixed64       SFIXED64 = 108;
  fixed64        FIXED64  = 109;
  double         DOUBLE   = 110;
  map<string, A> MAP      = 111;
}

// Foo is a sample message type used for testing message rendering.
message Foo {
  string                    full_name = 1;
  string                    nickname  = 2;
  google.protobuf.Timestamp mtime     = 3;
  Foo                       left      = 4;
  Foo                       right     = 5;
  Bar                       bar       = 8; // skip some field numbers
}

// Bar is a sample message type used for testing message rendering.
message Bar {
  string bar_id = 1;
  bytes  data   = 2;
}

enum ExternalEnum {
  One = 0;
  Two = 1;
  EXTERNAL_ENUM_THREE = 127;
}

// Baz is a sample message type used for testing enum rendering.
message Baz {
  enum Internal_Enum {
    Four = 0;
    Five = 1;
  }

  ExternalEnum ee = 1;
  Internal_Enum ie = 2;
  BallotOption option = 3;

}

enum BallotOption {
  BALLOT_OPTION_UNSPECIFIED  = 0;
  BALLOT_OPTION_YES          = 1;
  BALLOT_OPTION_ABSTAIN      = 2;
  BALLOT_OPTION_NO           = 3;
  BALLOT_OPTION_NO_WITH_VETO = 4;
}